Remove width style from rating to fix alignment

--- a/assets/js/atomic/blocks/product/rating/style.scss
+++ b/assets/js/atomic/blocks/product/rating/style.scss
@@ -3,7 +3,6 @@
 		display: block;
 		margin-top: 0;
 		margin-bottom: $gap-small;
-		width: 5.3em;
 
 		&__stars {
 			overflow: hidden;
